syntax = "proto3";
package comdex.auction.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/comdex-official/comdex/x/auction/types";

message Params {
  string liquidation_penalty_percent  = 1 [ 
    (gogoproto.moretags) = "yaml:\"liquidation_penalty_percent\""
  ]; 
  string auction_discount_percent  = 2 [ 
    (gogoproto.moretags) = "yaml:\"auction_discount_percent\""
  ]; 
  uint64 auction_duration_seconds  = 3 [ 
    (gogoproto.moretags) = "yaml:\"auction_duration_seconds\""
  ];
  string debt_mint_token_decrease_percentage  = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false,
    (gogoproto.moretags)   = "yaml:\"debt_mint_token_decrease_percentage\""
  ];
}